@@ -1,14 +1,10 @@
 package br.com.fiap.spring.mvc.configuration;
 
-import jakarta.annotation.Resource;
-import org.hibernate.Interceptor;
-import org.hibernate.Session;
 import org.springframework.context.MessageSource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.web.servlet.LocaleResolver;
-import org.springframework.web.servlet.config.annotation.InterceptorRegistration;
 import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
@@ -16,19 +12,19 @@ import org.springframework.web.servlet.i18n.SessionLocaleResolver;
 
 import java.nio.charset.StandardCharsets;
 import java.util.Locale;
-import java.util.ResourceBundle;
 
 @Configuration
 public class InternacionalizacaoConfig implements WebMvcConfigurer {
     @Bean
     public LocaleResolver localeResolver() {
         SessionLocaleResolver slr = new SessionLocaleResolver();
-        slr.setDefaultLocale(new Locale("pt", "BR"));
+        slr.setDefaultLocale(Locale.of("pt", "BR"));
         return slr;
     }
+
     @Bean
     public LocaleChangeInterceptor localeChangeInterceptor() {
-        LocaleChangeInterceptor lci =new LocaleChangeInterceptor();
+        LocaleChangeInterceptor lci = new LocaleChangeInterceptor();
         lci.setParamName("lang");
         return lci;
     }
@@ -37,11 +33,13 @@ public class InternacionalizacaoConfig implements WebMvcConfigurer {
     public void addInterceptors(InterceptorRegistry registry) {
         registry.addInterceptor(localeChangeInterceptor());
     }
+
     @Bean
     public MessageSource messageSource() {
         ResourceBundleMessageSource messageSource = new ResourceBundleMessageSource();
         messageSource.setBasename("i18n/messages");
-        messageSource.setDefaultEncoding((StandardCharsets.ISO_8859_1.name()));
-        return  messageSource;
+        messageSource.setDefaultEncoding(StandardCharsets.ISO_8859_1.name());
+        return messageSource;
     }
+
 }
